--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,83 @@
-langchain
-langgraph
-google-generativeai==0.3.2
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.13
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==3.7.1
+astroid==3.0.3
+attrs==25.3.0
+black==23.11.0
+cachetools==5.5.2
+certifi==2025.6.15
+cfgv==3.4.0
+charset-normalizer==3.4.2
+click==8.2.1
+coverage==7.9.1
+dill==0.4.0
+distlib==0.3.9
 fastapi==0.104.1
-uvicorn==0.24.0
-sqlalchemy==2.0.23
-requests==2.31.0
-python-dotenv==1.0.0
+filelock==3.18.0
+frozenlist==1.7.0
+google-ai-generativelanguage==0.4.0
+google-api-core==2.25.1
+google-auth==2.40.3
+google-generativeai==0.3.2
+googleapis-common-protos==1.70.0
+greenlet==3.2.3
+grpcio==1.73.0
+grpcio-status==1.62.3
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.25.2
+identify==2.6.12
+idna==3.10
+iniconfig==2.1.0
+isort==5.13.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.2.17
+langchain-core==0.2.43
+langchain-text-splitters==0.2.4
+langgraph==0.4.0
+langgraph-checkpoint==2.1.0
+langgraph-prebuilt==0.1.8
+langgraph-sdk==0.1.70
+langsmith==0.1.147
+mccabe==0.7.0
+multidict==6.5.0
+mypy_extensions==1.1.0
+nodeenv==1.9.1
+numpy==1.26.4
+orjson==3.10.18
+ormsgpack==1.10.0
+packaging==24.2
+pathspec==0.12.1
+platformdirs==4.3.8
+pluggy==1.6.0
+pre-commit==3.6.0
+propcache==0.3.2
+proto-plus==1.26.1
+protobuf==4.25.8
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pydantic==2.5.0
+pydantic_core==2.14.1
+pylint==3.0.3
+pytest==7.4.3
+pytest-cov==4.1.0
+python-dotenv==1.0.0
+PyYAML==6.0.2
+requests==2.31.0
+requests-toolbelt==1.0.0
+rsa==4.9.1
+sniffio==1.3.1
+SQLAlchemy==2.0.23
+starlette==0.27.0
+tenacity==8.5.0
+tomlkit==0.13.3
+tqdm==4.67.1
+typing_extensions==4.14.0
+urllib3==2.5.0
+uvicorn==0.24.0
+virtualenv==20.31.2
+xxhash==3.5.0
+yarl==1.20.1
